# course

./: README.md
SYSU_最优化理论/: test3.py
最优化理论/: report.md
机器学习与数据挖掘/Assignment1/: test.py
机器学习与数据挖掘/Assignment2/material/: test.py
机器学习与数据挖掘/Assignment3/: readme.txt  test2.py
计图/Assignment1/CGAssignment1/src/: TRDrawableMesh.cpp  TRDrawableMesh.h  TRFrameBuffer.cpp  TRFrameBuffer.h  TRRenderer.cpp  TRRenderer.h  TRShaderPipeline.cpp  TRShaderPipeline.h  TRWindowsApp.cpp  TRWindowsApp.h  main.cpp  shader_s.h
计图/Assignment2/CGAssignment2-Improve/: CMakeLists.txt  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
计图/Assignment2/CGAssignment2/src/: TRRenderer.cpp  TRShaderPipeline.cpp
计图/Assignment3/CGAssignment3/src/: TRRenderer.cpp  TRRenderer.h  TRShadingPipeline.cpp  TRShadingPipeline.h  TRShadingState.h  TRTexture2D.cpp  main.cpp
计图/Assignment4/CGAssignment4/src/: aabb.h  aarect.h  bvh.h  camera.h  color.h  constant_medium.h  hittable.h  hittable_list.h  main.cpp  material.h  moving_sphere.h  perlin.h  ray.h  rtweekend.h  sphere.h  texture.h  vec3.h
计图/期末大作业/resourses/models/: uploads_files_3461467_tree.mtl  uploads_files_3484563_ship.mtl
计图/期末大作业/shaders/: building_fragment.glsl  building_vertex.glsl  shipshader_fragment.glsl  skybox_vertex.glsl  terrain_fragment.glsl  terrain_vertex.glsl
计图/期末大作业/src/: Building.cpp  Building.h  TerrainGenerator.cpp  TerrainGenerator.h  camera.cpp  camera.h  glad.c  main.cpp  mesh.h  model.h  skybox.cpp  skybox.h  stb_image.h
